force-app/main/default/objects/leankor__ProjectRoom__c/leankor__ProjectRoom__c.object-meta.xml
<CustomObject>
    <description>A project room is not literally a room, but rather an optional grouping concept for kanban boards.</description>
    <label>Project</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>