force-app/main/default/objects/leankor__ProjectRoom__c/fields/Bond_Included__c.field-meta.xml
<CustomField>
    <fullName>Bond_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bond Included</label>
    <type>Checkbox</type>
</CustomField>