force-app/main/default/objects/leankor__ProjectRoom__c/fields/Booked_Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Booked_Change_Order__c</fullName>
    <label>Booked Change Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>