force-app/main/default/objects/leankor__ProjectRoom__c/fields/Certified_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Certified_Payroll__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Certified Payroll</label>
    <type>Date</type>
</CustomField>