force-app/main/default/objects/leankor__ProjectRoom__c/fields/Contract_Booked__c.field-meta.xml
<CustomField>
    <fullName>Contract_Booked__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Booked</label>
    <type>Date</type>
</CustomField>