force-app/main/default/objects/leankor__ProjectRoom__c/fields/Current_Contract__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract__c</fullName>
    <label>Current Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>