force-app/main/default/objects/leankor__ProjectRoom__c/fields/Customer_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Primary_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Primary Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>