force-app/main/default/objects/leankor__ProjectRoom__c/fields/Customer_Primary_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Primary_Contact_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Primary Contact Address</label>
    <type>Address</type>
</CustomField>