force-app/main/default/objects/leankor__ProjectRoom__c/fields/Est_Delayed_Until__c.field-meta.xml
<CustomField>
    <fullName>Est_Delayed_Until__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Est. Delayed Until</label>
    <type>Date</type>
</CustomField>