force-app/main/default/objects/leankor__ProjectRoom__c/fields/Executed_Returned__c.field-meta.xml
<CustomField>
    <fullName>Executed_Returned__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Executed &amp; Returned</label>
    <type>Date</type>
</CustomField>