force-app/main/default/objects/leankor__ProjectRoom__c/fields/Job_Address__c.field-meta.xml
<CustomField>
    <fullName>Job_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Address</label>
    <type>Address</type>
</CustomField>