force-app/main/default/objects/leankor__ProjectRoom__c/fields/LD_Amount__c.field-meta.xml
<CustomField>
    <fullName>LD_Amount__c</fullName>
    <label>LD Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>