force-app/main/default/objects/leankor__ProjectRoom__c/fields/LD_Special_Notes__c.field-meta.xml
<CustomField>
    <fullName>LD_Special_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LD Special Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>