force-app/main/default/objects/leankor__ProjectRoom__c/fields/LD_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LD_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LD Start Date</label>
    <type>Date</type>
</CustomField>