force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__Account__c.field-meta.xml
<CustomField>
    <fullName>leankor__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains reference to Account of related project.</description>
    <inlineHelpText>Select the customer account related to the project.</inlineHelpText>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>ProjectAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>