force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__AsynchCount__c.field-meta.xml
<CustomField>
    <fullName>leankor__AsynchCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>this field is require for counting asynchronous job when creating default boards in project</description>
    <label>AsynchCount</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>