force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__AutoAssignResource__c.field-meta.xml
<CustomField>
    <fullName>leankor__AutoAssignResource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AutoAssignResource as True : creating activity as well as RA will be created automatically as owner of card.</description>
    <label>Assign Activity Resource</label>
    <type>Checkbox</type>
</CustomField>