force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__Campaign__c.field-meta.xml
<CustomField>
    <fullName>leankor__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains reference to Campaign of related project.</description>
    <inlineHelpText>Select the campaign related to the project.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>ProjectCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>