force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__Case__c.field-meta.xml
<CustomField>
    <fullName>leankor__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains reference to Case of related project.</description>
    <inlineHelpText>Select the case related to the project.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>ProjectCases</relationshipName>
    <type>Lookup</type>
</CustomField>