force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__DetailedDescription__c.field-meta.xml
<CustomField>
    <fullName>leankor__DetailedDescription__c</fullName>
    <description>Detailed description of the project.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the detailed description of the project.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>