force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__DueDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__DueDate__c</fullName>
    <description>The target completion date of the project.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the target completion date of the project.</inlineHelpText>
    <label>Planned Due Date</label>
    <type>Date</type>
</CustomField>