force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__IsDependencyAckRecalculate__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsDependencyAckRecalculate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is set, the user has to acknowledge/approve the automatic recalculation of the external successor dependency and its chain of successors from the Project Dependency Gantt (PDG). User has to initiate the recalculation from the Dependency line (Lead/Lag popup window) between the externally dependent items.</description>
    <inlineHelpText>Require Acknowledgement of External Successor Dependency Recalculation.</inlineHelpText>
    <label>Ack. External Dependency Recalculation</label>
    <type>Checkbox</type>
</CustomField>