force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__IsTemplateProject__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsTemplateProject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This feature lets the manager decide if this is a template project.</description>
    <inlineHelpText>Indicate if this is a template project.</inlineHelpText>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>