force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>leankor__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains reference to Opportunity of related project.</description>
    <inlineHelpText>Select the opportunity related to the project.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>ProjectOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>