force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__PlannedBenefitGrossMargin__c.field-meta.xml
<CustomField>
    <fullName>leankor__PlannedBenefitGrossMargin__c</fullName>
    <description>Total dollars planned as a gross profit margin after all project related expenses, but not Net margin.</description>
    <inlineHelpText>Enter the total dollars planned as a gross profit margin after all project related expenses, but not net margin.</inlineHelpText>
    <label>$ Planned Benefit/Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>