force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__Portfolio__c.field-meta.xml
<CustomField>
    <fullName>leankor__Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent Portfolio in which this Project resides.</description>
    <inlineHelpText>Select the Leankor Portfolio in which to place this Project.</inlineHelpText>
    <label>Folder</label>
    <referenceTo>leankor__Portfolio__c</referenceTo>
    <relationshipName>ProjectRooms</relationshipName>
    <type>Lookup</type>
</CustomField>