force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__ProjectId__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The project id.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the project id.</inlineHelpText>
    <label>Project Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>