force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__ProjectLaunchDateTime__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectLaunchDateTime__c</fullName>
    <description>The date and time of the project launch.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date and time of the project launch.</inlineHelpText>
    <label>Project Launch Date</label>
    <type>DateTime</type>
</CustomField>