force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__ProjectManager__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user managing the project.</description>
    <inlineHelpText>Select the manager of the project.</inlineHelpText>
    <label>Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectUsers</relationshipName>
    <type>Lookup</type>
</CustomField>