force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__ProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectNumber__c</fullName>
    <description>This is a project number derived from the record ID field</description>
    <formula>&apos;PRJ-&apos; &amp; Id</formula>
    <inlineHelpText>Unique Leankor Project Number</inlineHelpText>
    <label>Project Number</label>
    <type>Text</type>
</CustomField>