force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__ProjectTemplate__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The project template that this project is cloned from.</description>
    <inlineHelpText>Select the project template that this project is to be cloned from.</inlineHelpText>
    <label>Project Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leankor__ProjectRoom__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leankor__ProjectRoom__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>ProjectTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>