force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__StartDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__StartDate__c</fullName>
    <description>The start date of the project estimation.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the start date of the project</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>