force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__TargetGrossMargin__c.field-meta.xml
<CustomField>
    <fullName>leankor__TargetGrossMargin__c</fullName>
    <description>Total Percentage planned gross margin.</description>
    <inlineHelpText>Enter the total percentage planned gross margin of the project.</inlineHelpText>
    <label>Target Gross Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>