force-app/main/default/objects/leankor__ProjectRoom__c/fields/leankor__TargetProjectCost__c.field-meta.xml
<CustomField>
    <fullName>leankor__TargetProjectCost__c</fullName>
    <description>Total planned expenses.</description>
    <inlineHelpText>Enter the total planned expenses for the project.</inlineHelpText>
    <label>Target Project Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>