force-app/main/default/objects/leankor__ProjectRoom__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <description>New Installation/Modernization values are coming from the Opportunity object LOB field</description>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Installation</fullName>
            </value>
            <value>
                <fullName>Modernization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>