force-app/main/default/objects/leankor__ProjectRoom__c/fields/Maintenance_Contract_Sold__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Contract_Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintenance Contract Sold</label>
    <type>Checkbox</type>
</CustomField>