force-app/main/default/objects/leankor__ProjectRoom__c/fields/Major_Project__c.field-meta.xml
<CustomField>
    <fullName>Major_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Major Project is taken from the Major Project Field that is coming from the Opportunity Object.
Anything that is not a Major Project is a Project.</description>
    <label>Major Project</label>
    <type>Checkbox</type>
</CustomField>