force-app/main/default/objects/leankor__ProjectRoom__c/fields/OCIP_CCIP__c.field-meta.xml
<CustomField>
    <fullName>OCIP_CCIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OCIP/CCIP</label>
    <type>Checkbox</type>
</CustomField>