force-app/main/default/objects/leankor__ProjectRoom__c/fields/Original_Contract__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract__c</fullName>
    <label>Original Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>