force-app/main/default/objects/leankor__ProjectRoom__c/fields/TKE_Contract__c.field-meta.xml
<CustomField>
    <fullName>TKE_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TKE Contract</label>
    <type>Checkbox</type>
</CustomField>