force-app/main/default/objects/leankor__ProjectRoom__c/fields/ValueStream__c.field-meta.xml
<CustomField>
    <fullName>ValueStream__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the checklist board.</description>
    <label>Checklist Board</label>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>ProjectValueStreams</relationshipName>
    <type>Lookup</type>
</CustomField>