force-app/main/default/objects/leankor__ProjectRoom__c/validationRules/leankor__Validation_to_weekday.validationRule-meta.xml
<ValidationRule>
    <fullName>leankor__Validation_to_weekday</fullName>
    <active>true</active>
    <errorConditionFormula>false</errorConditionFormula>
    <errorDisplayField>leankor__StartDate__c</errorDisplayField>
    <errorMessage>You have to enter weekdays only.</errorMessage>
</ValidationRule>